@@ -33,10 +33,10 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
@@ -143,6 +143,7 @@ public class MetadataDeleteIndexServiceTests extends ESTestCase {
         assertNull(after.routingTable().index(index));
         assertNull(after.blocks().indices().get(index));
         assertNull(after.metadata().getIndicesLookup().get(alias));
+        assertThat(after.metadata().aliasedIndices(alias), empty());
     }
 
     public void testDeleteBackingIndexForDataStream() {
@@ -174,7 +175,7 @@ public class MetadataDeleteIndexServiceTests extends ESTestCase {
 
         List<Integer> indexNumbersToDelete = randomSubsetOf(
             numBackingIndicesToDelete,
-            IntStream.rangeClosed(1, numBackingIndices - 1).boxed().collect(Collectors.toList())
+            IntStream.rangeClosed(1, numBackingIndices - 1).boxed().toList()
         );
 
         Set<Index> indicesToDelete = new HashSet<>();
