@@ -22,7 +22,7 @@ import org.elasticsearch.common.transport.BoundTransportAddress;
 import org.elasticsearch.common.transport.TransportAddress;
 import org.elasticsearch.common.util.PageCacheRecycler;
 import org.elasticsearch.common.util.concurrent.FutureUtils;
-import org.elasticsearch.core.internal.io.IOUtils;
+import org.elasticsearch.core.IOUtils;
 import org.elasticsearch.indices.breaker.NoneCircuitBreakerService;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.MockLogAppender;
@@ -168,9 +168,7 @@ public class SeedHostsResolverTests extends ESTestCase {
         );
         closeables.push(transportService);
         recreateSeedHostsResolver(transportService);
-        List<String> hosts = IntStream.range(9300, 9310)
-            .mapToObj(port -> NetworkAddress.format(loopbackAddress) + ":" + port)
-            .collect(Collectors.toList());
+        List<String> hosts = IntStream.range(9300, 9310).mapToObj(port -> NetworkAddress.format(loopbackAddress) + ":" + port).toList();
         final List<TransportAddress> transportAddresses = seedHostsResolver.resolveHosts(hosts);
         assertThat(transportAddresses, hasSize(7));
         final Set<Integer> ports = new HashSet<>();
