@@ -13,6 +13,7 @@ import org.elasticsearch.common.xcontent.XContentHelper;
 import org.elasticsearch.search.DocValueFormat;
 import org.elasticsearch.search.aggregations.InternalAggregation;
 import org.elasticsearch.search.aggregations.ParsedAggregation;
+import org.elasticsearch.search.aggregations.support.SamplingContext;
 import org.elasticsearch.test.InternalAggregationTestCase;
 import org.elasticsearch.xcontent.ToXContent;
 import org.elasticsearch.xcontent.XContentBuilder;
@@ -23,7 +24,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import static java.util.Collections.emptyMap;
@@ -72,6 +72,19 @@ public class InternalStatsTests extends InternalAggregationTestCase<InternalStat
         assertEquals(expectedSum, reduced.getSum(), 1e-7);
         assertEquals(expectedMin, reduced.getMin(), 0d);
         assertEquals(expectedMax, reduced.getMax(), 0d);
+    }
+
+    @Override
+    protected boolean supportsSampling() {
+        return true;
+    }
+
+    @Override
+    protected void assertSampled(InternalStats sampled, InternalStats reduced, SamplingContext samplingContext) {
+        assertEquals(sampled.getCount(), samplingContext.scaleUp(reduced.getCount()));
+        assertEquals(sampled.getSum(), samplingContext.scaleUp(reduced.getSum()), 1e-7);
+        assertEquals(sampled.getMin(), reduced.getMin(), 0d);
+        assertEquals(sampled.getMax(), reduced.getMax(), 0d);
     }
 
     public void testSummationAccuracy() {
@@ -269,7 +282,7 @@ public class InternalStatsTests extends InternalAggregationTestCase<InternalStat
 
     public void testIterator() {
         InternalStats aggregation = createTestInstance("test", emptyMap());
-        List<String> names = StreamSupport.stream(aggregation.valueNames().spliterator(), false).collect(Collectors.toList());
+        List<String> names = StreamSupport.stream(aggregation.valueNames().spliterator(), false).toList();
 
         assertEquals(5, names.size());
         assertTrue(names.contains("min"));
